turn this into a springboot app